Feature: Add notes

--- a/index.html
+++ b/index.html
@@ -5,5 +5,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Notes App</title>
   </head>
-  <body></body>
+  <body>
+    <h1>My Notes App</h1>
+    <div class="Container">
+      <input type="text" id="input-field" placeholder="Write your note..." />
+      <button id="addBtn">Add Note</button>
+      <div class="Notes-container"></div>
+    </div>
+    <script src="script.js"></script>
+  </body>
 </html>
