Resolved Bugs, Handled Edge cases

--- a/index.html
+++ b/index.html
@@ -4,9 +4,10 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Notes App</title>
+    <link rel="stylesheet" href="styles.css" />
   </head>
   <body>
-    <h1>My Notes App</h1>
+    <h1>MyNotes App</h1>
     <div class="Container">
       <input type="text" id="input-field" placeholder="Write your note..." />
       <button id="addBtn">Add Note</button>
